components/Typography/MainTitle/MainTitle.module.scss
.title {
  animation: text-appearence 0.5s ease-out 0.6s both;
  background-clip: text;
  background-image: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
  font-size: 5em;
  font-weight: 800;
  letter-spacing: -0.06em;
  text-align: center;
  -webkit-text-fill-color: transparent;
}

.subtitle {
  animation: text-appearence 1s ease-out 0.7s both;
  color: #454267;
  font-size: max(1rem, 1.4em);
  font-weight: 700;
  letter-spacing: -0.04em;
  line-height: 1.2;
  margin-top: 0.2em;
  text-align: center;
}

@keyframes text-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 30%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

